# diaudio

./: Cargo.toml  README.md  justfile
src/: main.rs
src/pages/: any_note.rs  fft_draw.rs  mod.rs  real_time.rs
