[package]
edition = "2024"
name = "diaudio"
version = "0.1.0"

[dependencies]
dioxus = {version = "0.7.3", features = ["web", "router"]}
gloo-timers = {version = "0.3.0", features = ["futures"]}
js-sys = "0.3.81"
rustfft = "6.4.1"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
web-sys = {version = "0.3.81", features = [
  "AnalyserNode",
  "AudioContext",
  "AudioNode",
  "MediaDevices",
  "MediaStream",
  "MediaStreamAudioSourceNode",
  "MediaStreamConstraints",
  "Navigator",
  "Window",
]}

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
